<resources>
    <!-- 앱 이름 -->
    <string name="app_name">다대여</string>
    <!-- behavior-->
    <string name="appbar_scrolling_view_behavior" translatable="false">
        com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior
    </string>
    <!--           *****    mainActivity    *****           -->
    <!-- 하단바 -->
    <string name="string_bottom_menu_cataegory">카테고리</string>
    <string name="string_bottom_menu_home">홈</string>
    <string name="string_bottom_menu_search">검색</string>
    <string name="string_bottom_menu_myinfo">내정보</string>
    <string name="string_bottom_menu_myrent">대여</string>
    <!--           *****    HomeFragment    *****           -->
    <!-- Item Type1 -->
    <string name="string_item_type1_btn_more">+ 더보기</string>
    <!--           *****    SearchFragmnet    *****           -->
    <!-- EditText -->
    <string name="string_input_text">검색어를 입력하세요.</string>
</resources>